force-app/main/default/objects/Incentive__c/Incentive__c.object-meta.xml
<CustomObject>
    <label>Incentive</label>
    <nameField>
        <displayFormat>I-{000000000}</displayFormat>
        <label>Incentive Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>