force-app/main/default/objects/Incentive__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <label>Last Payment Date</label>
    <summarizedField>Incentive_Payment__c.Payment_Date__c</summarizedField>
    <summaryForeignKey>Incentive_Payment__c.Incentive__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>