force-app/main/default/objects/Incentive__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <label>Paid Amount</label>
    <summarizedField>Incentive_Payment__c.Paymen_Amount__c</summarizedField>
    <summaryForeignKey>Incentive_Payment__c.Incentive__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>