force-app/main/default/objects/Incentive__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <formula>IF(NOT(ISBLANK( Account__c )), IF(Account__r.IsPersonAccount = True, Account__r.FirstName&amp;&quot; &quot;&amp; Account__r.LastName ,Account__r.Name) , Employee__r.FirstName &amp;&quot; &quot;&amp; Employee__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee</label>
    <type>Text</type>
</CustomField>